done for Monday night

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,12 +4,12 @@ body {
 }
 
 .row {
-    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .player_card {
     border: 2px solid white ;
-    padding-top: 20px;
+    /* padding-top: 20px; */
     padding-bottom: 20px;
 }
 
