--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
     padding-bottom: 20px;
 }
 
-.character_name {
+/* .character_name {
     position: relative;
     top: -150px;
     left: 0;
@@ -25,4 +25,4 @@ body {
     bottom: 25px;
     left: 0;
     width: 100%;
-}
+} */
